MDEV-12478 CONCAT function inside view casts values incorrectly with Oracle sql_mode